force-app/main/default/objects/Food__c/fields/Stock_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stock_Amount__c</fullName>
    <label>Stock Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>