force-app/main/default/objects/Food__c/validationRules/No_Negative_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Negative_Stock</fullName>
    <active>true</active>
    <errorConditionFormula>Stock_Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Stock_Amount__c</errorDisplayField>
    <errorMessage>Stock amount cannot be negative</errorMessage>
</ValidationRule>