force-app/main/default/objects/Food__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Distributor__c</columns>
    <columns>Account__c</columns>
    <columns>Stock_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>